fix: a few issues on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,6 +68,7 @@ body {
   width: 100%;
   height: 100%;
   border: 1px solid black;
+  margin-bottom: 1px;
 }
 
 @keyframes fadeIn {
@@ -116,14 +117,17 @@ body {
 }
 
 .tag-cloud ul li {
-  display: none;
+  display: inline-block;
   margin: 0 0 0.3em 1em;
   padding: 0;
 }
 
-.tag-cloud ul li.active,
-.tag-cloud-hover ul li {
-  display: inline-block;
+.tag-cloud-collapse-btn {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+  z-index: 1;
+  padding: 1px 4px;
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
